syntax = "proto3";

package post;

option go_package = "./services/post/proto";

service PostStorage {
	rpc StorePost(StorePostRequest) returns (StorePostResponse);
	rpc ReadPosts(ReadPostsRequest) returns (ReadPostsResponse);
}

message StorePostRequest {
	Post post = 1;
}
message StorePostResponse {
	string ok = 1;
} 

message ReadPostsRequest {
	repeated int64 postids = 1;	
}

message ReadPostsResponse {
	string ok = 1;
	repeated Post posts = 2;
}

message Post {
	int64           postid = 1;
	POST_TYPE       posttype = 2;
	int64           timestamp = 3; 
	int64           creator = 4;
	string          text = 5;
	repeated int64  usermentions = 6;
	repeated int64  medias = 7;
	repeated string urls = 8; 
}

enum POST_TYPE {
	UNKNOWN = 0;
	POST = 1;
	REPOST = 2;
	REPLY = 3;
	DM = 4;
}
